# inference_results_v6.0

./: README.md  run.sh  summary_results.json
.github/: CODEOWNERS
.github/workflows/: publish-manually.yml  publish.yml
closed/AMD/documentation/: bandwidth.md  calibration.md
closed/AMD/src/: README.md
closed/AMD/systems/: 87xMI355X_22xEPYC_9575F.json  8xMI355X_2xEPYC_9575F.json  94xMI355X_24xEPYC_9575F.json
closed/ASUSTeK/: Makefile.docker  README.md
closed/ASUSTeK/results/: submission_checker_log.txt
closed/ASUSTeK/systems/: ESC8000A_E13P_RTX_PRO_6000_PCIE_96GBx8_TRT.json  ESC8000_E12P_RTX_PRO_6000_PCIE_96GBx8_TRT.json  XA_NB3I-E12_B300x8_TRT.json  system_descriptions.tsv
closed/Cisco/: README.md  README_NVIDIA.md  README_llama2_70b_AMD.md
closed/Cisco/docker/: Dockerfile.legacy
closed/Cisco/documentation/: calibration_amd.md  commands.md
closed/Cisco/systems/: .16xMI350X.json.swp  C240M8_1_node_2S_GNR_86C.json  C845A_M8_H200NVL_141GBx8_TRT.json  C845A_M8_RTXPro6000_96GBx8_TRT.json  C880A_M8_B300_288GBx8_TRT.json  Cisco_UCS_16xMI350x.json  Cisco_UCS_8xMI350x.json  X210M8_X580P_H200NVL_141GBx4_TRT.json  X215M8_X580P_RTXPro6000_96GBx4_TRT.json
closed/CoreWeave/: Makefile.const  verify_output_len.txt
closed/CoreWeave/code/qwen3-vl-235b-a22b/vllm/: pyproject.toml
closed/CoreWeave/code/qwen3-vl-235b-a22b/vllm/scripts/benchmarks/local/8xh200/: server.sh
closed/CoreWeave/code/qwen3-vl-235b-a22b/vllm/scripts/benchmarks/local/gb300-nvl4/: offline.sh
closed/CoreWeave/code/qwen3-vl-235b-a22b/vllm/scripts/benchmarks/slurm/gb300-nvl4/: offline.sh
closed/CoreWeave/code/qwen3-vl-235b-a22b/vllm/src/mlperf_inf_mm_q3vl_nv/: log.py
closed/CoreWeave/results/: submission_checker_log.txt
closed/CoreWeave/scaleout/: REPRODUCE.md  run_scaleout.sh  run_scaleout_disagg.py
closed/CoreWeave/systems/: B200-SXM-180GBx16_TRT.json  GB200-NVL72_GB200-186GB_aarch64x64_TRT.json  GB300-NVL72_GB300-288GB_aarch64x64_TRT.json  GB300-NVL72_GB300-288GB_aarch64x8_TRT.json
closed/Dell/: Dell_README.md  README_gpt_oss_120b_mi300x_mi355x.md  README_llama2_70b_mi300x_mi355x.md
closed/Dell/results/: submission_checker_log.txt
closed/Dell/setup_mi300x/: Dockerfile.mlperf_gfx942  build_model_and_dataset_env.sh  ensure_vllm_branch.sh  start_model_and_dataset_env.sh  start_submission_env.sh
closed/Dell/src/: Makefile.docker  Makefile.submission  main.py  preload.py  user_MI355X.conf  user_mi355x.conf
closed/Dell/systems/: 1-node-2S-GNR_86C.json  8xMI300X_2xPlatinum_8470.json  8xMI355X_2xEPYC_9655.json  Dell_Pro_Max_GB10x1.json  XE7740_H200_NVL_141GBx8_TRT.json  (+8 more)
closed/Dell_MangoBoost/: submission_checker_log.txt
closed/GigaComputing/: Makefile  Makefile.pyxis
closed/Google/: Makefile.build  Makefile.const  mlperf_log_accuracy_baseline.json  verify_performance.txt
closed/Google/src/dlrm-v3/inference_harness/tools/ffi_utils/: CMakeLists.txt
closed/HPE/: README.md
closed/Krai/: README.md
closed/Lambda_SIT/: Makefile  Makefile.const  Makefile.docker  Makefile.submission  run_multinode_llama.sh  slurm-1427.out  slurm-1441.out  slurm-1442.out  slurm-1445.out  verify_output_len.txt
closed/MangoBoost/: submission_checker_log.txt
closed/NVIDIA/: Makefile.docker  Makefile.submission  Makefile.tests
closed/Nebius/: README.md
closed/Netweb_technologies/: Makefile.submission  README.md
closed/Supermicro/: Makefile  Makefile.docker  Makefile.pyxis  Makefile.submission  README.md
open/Inventec/: submission_checker_log.txt
open/Krai/: model_mapping.json
submission/: igbh_workload_metrics.json  mlperf_log_accuracy.json  mlperf_log_detail.txt
submission/systems/: DynamoNPU.json
(+5611 files in other folders)
